src/objects/Utility_Company_master__c.object
<CustomObject>
    <description>Utility Company (distinct from Utility Rate Code)</description>
    <fields>
        <fullName>Annual_Utility_Rate_Escalator__c</fullName>
        <label>Annual Utility Rate Escalator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EIA_Utility_ID__c</fullName>
        <externalId>true</externalId>
        <label>EIA Utility ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Externally_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Externally Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Service_Territories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Service Territories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KW_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Utility Company supports Kilowatt Lease</description>
        <label>Kilowatt Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sighten_Custom_Rate_Code_uuid__c</fullName>
        <description>The custom rate code uuid to integrate with the Sighten API for the associated utility company master.</description>
        <inlineHelpText>The custom rate code uuid to integrate with the Sighten API for the associated utility company master.</inlineHelpText>
        <label>Sighten Custom Rate Code uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sighten_NA_Territory_uuid__c</fullName>
        <description>The NA territory uuid to integrate with the Sighten API for the associated utility company master.</description>
        <inlineHelpText>The NA territory uuid to integrate with the Sighten API for the associated utility company master.</inlineHelpText>
        <label>Sighten NA Territory uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sighten_Utility_uuid__c</fullName>
        <description>Contains the uuid for the utility company in the Sighten system</description>
        <externalId>true</externalId>
        <label>Sighten Utility uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Compensation_Method__c</fullName>
        <label>Solar Compensation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Net Metering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Serviced__c</fullName>
        <label>State Serviced</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Utility Company</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State_Serviced__c</columns>
        <columns>Sighten_Utility_uuid__c</columns>
        <columns>Sighten_NA_Territory_uuid__c</columns>
        <columns>Sighten_Custom_Rate_Code_uuid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MA</fullName>
        <columns>NAME</columns>
        <columns>State_Serviced__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State_Serviced__c</field>
            <operation>equals</operation>
            <value>MA</value>
        </filters>
        <label>MA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Utility Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>